--- a/assets/css/_vehicle_map.scss
+++ b/assets/css/_vehicle_map.scss
@@ -84,3 +84,20 @@
     }
   }
 }
+
+.m-vehicle-map__locate-button {
+  svg {
+    fill: $color-font-grey;
+    stroke: $color-font-grey;
+  }
+
+  .m-vehicle-map-state--locating + .m-vehicle-map & a {
+    cursor: default;
+
+    svg {
+      fill: $color-button-secondary;
+      stroke: $color-button-secondary;
+      stroke-width: 2;
+    }
+  }
+}
